# dataflow-python-multiple-packages

./: README.md
myorg-lib-first/: pyproject.toml
myorg-lib-first/myorg/: models.py
myorg-lib-second/: pyproject.toml
myorg-lib-second/myorg/: utils.py
myorg-lib-second/tests/: test_myorg.py
