[tool.poetry]
name = "myorg"
version = "0.1.0"
description = ""
authors = ["Nicolas Gallot <nicolas.gallot@predictus.io>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
